--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,25 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 6vmin;
+  filter: invert(1);
   pointer-events: none;
+  position: absolute;
+
+  right: -0%;
+  top: 1%
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: shrink-move 1s ease forwards;
+    animation-delay: 0.5s;
   }
 }
 
+
 .App-header {
-  background-color: #282c34;
+  background-color: #0e0d24;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +29,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
