--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 
 
 .App-header {
-  background-color: #0e0d24;
+  background-color: #030207;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
